--- a/International/admin/admin_index.html
+++ b/International/admin/admin_index.html
@@ -105,43 +105,43 @@
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
-		   	<li style="background-image: url(../images/img_bg_1.jpg);">
+		   	<li style="background-image: url(../images/back1.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Expert Legal Solutions</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-									<p><a class="btn btn-primary btn-lg" href="#">Make An Appointment</a></p>
+									<h1>International Restaurant</h1>
+									<h2>Come in and have good time with good foods!</h2>
+									<p><a class="btn btn-primary btn-lg" href="reservation.html">Make A Reservation</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(../images/img_bg_2.jpg);">
+		   	<li style="background-image: url(../images/back2.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Business Law</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Make An Appointment</a></p>
+									<h1>International Restaurant</h1>
+									<h2>Come in and have good time with good foods!</h2>
+									<p><a class="btn btn-primary btn-lg" href="reservation.html">Make A Reservation</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(../images/img_bg_3.jpg);">
+		   	<li style="background-image: url(../images/back3.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>Defend Your Constitutional Right with Legal Help</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Make An Appointment</a></p>
+									<h1>International Restaurant</h1>
+									<h2>Come in and have good time with good foods!</h2>
+									<p><a class="btn btn-primary btn-lg" href="reservation.html">Make A Reservation</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -175,168 +175,6 @@
 					<span class="fh5co-counter-label">Lawyers</span>
 				</div>
 			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-content">
-		<div class="video fh5co-video" style="background-image: url(../images/video.jpg);">
-			<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-			<div class="overlay"></div>
-		</div>
-		<div class="choose animate-box">
-			<div class="fh5co-heading">
-				<h2>Why Choose Us?</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-			</div>
-			<div class="progress">
-				<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-				Adoption Law 50%
-				</div>
-			</div>
-			<div class="progress">
-				<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-				Family Law 80%
-				</div>
-			</div>
-			<div class="progress">
-				<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-				Real Estate Law 70%
-				</div>
-			</div>
-			<div class="progress">
-				<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-				Personal Injury Law 40%
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-practice" class="fh5co-bg-section">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Our Legal Practice Area</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-home"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Real Estate Law</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-eye"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Insurance Law</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-shopping-cart"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Business Law</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-umbrella"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Personal Injury</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-heart"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Medical Neglegence</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-help"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Criminal Defense</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-12 text-center animate-box">
-					<p><a class="btn btn-primary btn-lg btn-learn" href="#">View More</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(../images/video.jpg);">
-		</div>
-		<div class="choose animate-box">
-			<div class="fh5co-heading">
-				<h2>Free Legal Consultation</h2>
-			</div>
-			<form action="#">
-				<div class="row form-group">
-					<div class="col-md-6">
-						<!-- <label for="fname">First Name</label> -->
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-					</div>
-					<div class="col-md-6">
-						<!-- <label for="lname">Last Name</label> -->
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<!-- <label for="email">Email</label> -->
-						<input type="text" id="email" class="form-control" placeholder="Your email address">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<!-- <label for="subject">Subject</label> -->
-						<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
-					</div>
-				</div>
-
-				<div class="row form-group">
-					<div class="col-md-12">
-						<!-- <label for="message">Message</label> -->
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<input type="submit" value="Send Message" class="btn btn-primary">
-				</div>
-
-			</form>
 		</div>
 	</div>
 
